refactoring css and scss

--- a/src/sass/_admin.admin.scss
+++ b/src/sass/_admin.admin.scss
@@ -1,6 +1,6 @@
 
 .admin{	
-	.panel-teasers-list{
+	.dashboard-dataset-teasers{
 		padding-bottom:0;
 	}
 	.form-group label {
@@ -18,7 +18,7 @@
 		h2{
 		    float: left;
 		}
-		.panel-teasers-list button.btn-blue{
+		.dashboard-dataset-teasers button.btn-blue{
 		    float: right;
 		    width: 100px;
 		    padding: 10px;
