adjusting filetree border

--- a/src/sass/_dataset.file-tree.scss
+++ b/src/sass/_dataset.file-tree.scss
@@ -61,7 +61,7 @@
 					overflow: hidden;
 					overflow-y: scroll;
 					height: 170px;
-					border: 1px solid #bbb;
+					border: 1px solid #ddd;
 					margin: 5px;
 				}
 			}
