Fixed flow label styling

--- a/src/sass/_dataset.dataset.scss
+++ b/src/sass/_dataset.dataset.scss
@@ -50,6 +50,10 @@
 						min-height: 300px;
 					}
 				}
+				.float-label-input label {
+					font-size: 10px;
+					padding-right: 5px;
+				}
 				.file-name-link{
 					i{
 						font-size: 13px;
