Replaced icon with toggle button and remove show/hide buttons

--- a/src/sass/_dataset.file-tree.scss
+++ b/src/sass/_dataset.file-tree.scss
@@ -72,6 +72,10 @@
 .dataset .dataset-wrap{
 	.fileStructure.panel-group{
 		.panel-default{
+			.type-icon {
+				background: none;
+				border: none;
+			}
 			.panel-heading .panel-title{
 				font-size: 18px;
 				color: #424242;
