--- a/src/sass/_elements-wrappers.scss
+++ b/src/sass/_elements-wrappers.scss
@@ -261,6 +261,7 @@ h1,h2,h3,h4,h5,h6{
 	margin-left:2px;
 	padding:2px 5px;
 	font-size:12px;
+	text-transform: none;
 	&:hover{
 		color:$primary;
 		background:none;
