--- a/src/sass/crn_app/_variables.scss
+++ b/src/sass/crn_app/_variables.scss
@@ -1,9 +1,11 @@
 // Colors
-$transparent: rgba(0,0,0,0);
+$transparent: rgba(0, 0, 0, 0);
 $transparent3: rgba(0, 0, 0, .3);
 $transparent5: rgba(0, 0, 0, .7);
 $transparent7: rgba(0, 0, 0, .7);
 $transparent9: rgba(0, 0, 0, .9);
+
+$transparent1-w: rgba(255, 255, 255, .1);
 
 $white: #fff;
 $black: #000;
@@ -23,22 +25,38 @@ $turquoise:#009b76;
 $night:#012a30; //body font color
 
 
+$notification-green: #77e6a3;
+
+
 // Gray
 
-$c-666: #666;
-$c_56: #565656;
+$c-9e: #9e9e9e;
+$c-90: #909090;
+
+$c-77: #777;
+$c-66: #666;
+$c-56: #565656;
+$c-42: #424242;
+$c-33: #333;
+$c-21: #212121;
 
 $aaa: #aaa;
+$ccc: #ccc;
+$c2: #c2c2c2;
+
 $ddd: #ddd;
+$d9: #d9d9d9;
+$de: #dedede;
+
 $eee: #eee;
-$e3: #e3e3e3;
+$e1: #e1e1e1;
 $e5: #e5e5e5;
 $e7: #e7e7e7;
-$e9: #e9e9e9;
 
 
-$f8: #f8f8f8;
 $f4: #f4f4f4;
+$f8: #f8f8f8;
+$f9: #f9f9f9;
 
 
 $primary: $ocean;
@@ -62,14 +80,28 @@ $btn-shadow: 1px 1px 3px -1px $transparent7;
 
 
 $text-primary:         $primary;
-$text-success:         #24c85e !default;
-$text-info:            #24c8c8 !default;
-$text-warning:         #f7ba4b !default;
-$text-danger:          #c82424 !default;
+$text-success:         $brand-success;
+$text-info:            $brand-info;
+$text-warning:         $brand-warning;
+$text-danger:          $brand-danger;
 
 
-.text-primary {color:  $primary;}
-.text-success {color:  $text-success;}
-.text-info {color:  $text-info;}
-.text-warning {color:  $text-warning;}
-.text-danger {color:  $text-danger;}
+.text-primary {
+    color: $primary;
+}
+
+.text-success {
+    color: $text-success;
+}
+
+.text-info {
+    color: $text-info;
+}
+
+.text-warning {
+    color: $text-warning;
+}
+
+.text-danger {
+    color: $text-danger;
+}
