--- a/src/sass/crn_app/_common.status.scss
+++ b/src/sass/crn_app/_common.status.scss
@@ -1,17 +1,17 @@
-.dataset .status-container{
+.dataset .status-container {
 	width: 100%;
 	float: none;
 	box-sizing: border-box;
 	
-	span.status-wrap{
+	span.status-wrap {
 		padding: 0;
 		margin: 0;
-		> span{
+		> span {
 			padding:20px 0 0;
 			display: block;
-			@extend .clearfix;
+			@extend %clearfix;
 		}
-		.status{
+		.status {
 		 	display: inline-block;
 		 	width: auto;
 		 	float: left;
@@ -22,9 +22,9 @@
 	}
 }
 
-.dataset-status{
+.dataset-status {
 	background: none;
-	color: #676767;
+	color: $c-66;
 	font-size: 14px;
 	font-family: $font-family-cabin;
 	font-weight: 300;
@@ -34,27 +34,27 @@
 	display: inline;
 	width: 100%;
 	position: relative;
-	i.fa{
+	i.fa {
 		margin-right: 5px;
 	}
 
-	&.ds-primary{
+	&.ds-primary {
 		background:none;
 		color:$primary;
 	}
-	&.ds-success{
+	&.ds-success {
 		background:none;
 		color:$brand-success;
 	}
-	&.ds-info{
+	&.ds-info {
 		background:none;
 		color:$brand-info;
 	}
-	&.ds-warning{
+	&.ds-warning {
 		background:none;
 		color:$brand-warning;
 	}			
-	&.ds-danger{
+	&.ds-danger {
 		background:none;
 		color:$brand-danger;
 	}
