--- a/src/sass/crn_app/_common.tooltip.scss
+++ b/src/sass/crn_app/_common.tooltip.scss
@@ -1,20 +1,21 @@
 
 // tooltips ========================
 
-.tooltip{
+.tooltip {
 	z-index:4000;
 	margin-left:-1px;
+	&.top .tooltip-arrow {
+		border-top-color: $transparent9;
+	}
 }
 
-.tooltip-inner{
+.tooltip-inner {
 	max-width:200px;
 	font-size:12px;
 	border-radius:0;
-	background: rgba(0,0,0,0.9);
+	background: $transparent9;
 	color:$white;
 	padding: 8px 12px;
 }
-.tooltip.top .tooltip-arrow{
-	border-top-color: rgba(0,0,0,0.9);
-}
+
 
