--- a/src/sass/crn_app/_common.typeahead.scss
+++ b/src/sass/crn_app/_common.typeahead.scss
@@ -1,30 +1,30 @@
 .typeahead {
 	position: relative;
 	display: inline;
-	input{
+	input {
 		padding: 4px 10px;
 		margin: 5px 0;
 	}
 
 	.typeahead-results {
 		position: absolute;
-		background: #FFF;
+		background: $white;
 		list-style: none;
 		padding: 0;
-		box-shadow: 1px 1px 5px -2px rgba(0,0,0,0.4);
+		box-shadow: 1px 1px 5px -2px $transparent5;
 		min-width: 300px;
 		max-height:300px;
 		overflow:hidden;
 		overflow-y: scroll;
 
 		li {
-			border-top: 1px solid #CCC;
+			border-top: 1px solid $ccc;
 			padding: 15px;
 			cursor: pointer;
 
 			&:first-child {border: none;}
-			&:hover {background: #EEE;}
-			&:active {background: #DDD;}
+			&:hover {background: $eee;}
+			&:active {background: $ddd;}
 		}
 	}
 }
