--- a/src/sass/crn_app/_nav.left_navbar.scss
+++ b/src/sass/crn_app/_nav.left_navbar.scss
@@ -13,7 +13,7 @@
 		text-align: center;
 		margin: 5px 0;
 		cursor:pointer;
-		color: #fff;
+		color: $white;
 	}
 	.left-nav-slider{
 		z-index: 1200;
@@ -66,7 +66,7 @@
 					color: $white;
 				}
 				&.active{
-					background-color: $stanfordRed;
+					background-color: $stanford-red;
 					//@include gradient-vertical($start-color: $ocean, $end-color:lighten($ocean, 5%), $start-percent: 40%, $end-percent: 100%);
 					box-shadow:inset 0 0 5px rgba(0,0,0,0.5);
 
