--- a/src/sass/crn_app/_notification.alert.scss
+++ b/src/sass/crn_app/_notification.alert.scss
@@ -1,68 +1,67 @@
 
 //Alerts // ================================================================
-.alert{
+.alert {
     font-size: 14px;
-    background: rgba(0, 0, 0, 0.8);
+    background: $transparent7;
     border: none;
     padding: 10px 40px 10px 20px;
-    color: #D9D9D9;
-    .alert-left{
-    	a{
+    color: $d9;
+    .alert-left {
+    	a {
 			text-decoration: underline;
-		}
-    	a{
     		color: $brand-info; 
-    		&:hover{
+    		&:hover {
     			color:lighten($brand-info, 10%);
     		}
     	}
     }
-	.dismiss-button-x{
+	.dismiss-button-x {
 	    position: absolute;
 	    top: 0;
 	    right: 0;
 	    background: none;
 	    border: none;
 	    color: $brand-info; 
-    		&:hover{
+    		&:hover {
     			color:lighten($brand-info, 10%);
     		}
 	}
-	&.alert-danger{
+	&.alert-danger {
 		color:lighten($brand-danger,10%);
-		strong{color:lighten($brand-danger,10%);}
-		a{
+		strong {color:lighten($brand-danger,10%);}
+		a {
 			text-decoration: underline;
 		}
 		a,
-		.dismiss-button-x{	
+		.dismiss-button-x {	
 			color:lighten($brand-danger,10%);
-    		&:hover{
+    		&:hover {
     			color:lighten($brand-danger, 2%);
     		}
     	}
 	}
-	&.alert-warning{
+	&.alert-warning {
 		color:$brand-warning;
-		strong{color: $brand-warning;}
-		a{
+		strong {color: $brand-warning;}
+		a {
 			text-decoration: underline;
 		}
 		a,
-		.dismiss-button-x{	
+		.dismiss-button-x {	
 			color:$brand-warning;
-    		&:hover{
+    		&:hover {
     			color:lighten($brand-warning, 10%);
     		}
     	}
 	}
 }
-.navbar{
-	.alert{
+.navbar {
+	.alert {
 		position: absolute;
-		left: 350px;
-		max-width: 800px;
-		top: 15px;
-		font-size: 18px
+	    left: 1%;
+	    top: 5px;
+	    font-size: 18px;
+	    width: 98%;
+	    min-height: 64px;
 	}
 }
