--- a/src/sass/crn_app/_upload.validation.scss
+++ b/src/sass/crn_app/_upload.validation.scss
@@ -88,7 +88,7 @@
 						color:#888;
 						margin-top: 3px;
 						color:#333;
-						&:before{
+						&::before{
 							color:$coral;
 							content: 'Hide\00a0';
 							margin-right: 0 ;
@@ -99,12 +99,12 @@
 			 		&.collapsed{
 						//color:  $coral;
 						background-color:#F3F3F3;
-						&:before{
+						&::before{
 				 				
 						}
 						.pull-right{
 							
-							&:before{
+							&::before{
 								content: 'View\00a0';	
 							}
 						
@@ -118,7 +118,7 @@
 						background-color:#efefef;
 							.pull-right{
 							
-								&:before{
+								&::before{
 									color:darken($coral, 10%);
 								}
 							}
