--- a/src/sass/crn_app/_user.signin.scss
+++ b/src/sass/crn_app/_user.signin.scss
@@ -1,46 +1,46 @@
 // signin page
-.is-front{
+.is-front {
 	height:100%;
 	.full-col,
 	.main,
 	.main > div,
 	.sign-in,
-	.intro{
+	.intro {
 		height:100%;
 	}
 
-	.intro{
+	.intro {
 	    display: block;
 	    width: 100%;
 	    height: 100%;
-	    .introBG{
+	    .introBG {
 	    	background: url(../assets/signin-bg.jpg) 0 0 no-repeat;
 			background-size: cover;
 			min-height: 90%;
 			background-color: #1B3D43;
 		}
-		.intro-inner{
+		.intro-inner {
 			max-width:1800px;
 			margin:0 auto;
 		}
 	}
-	@media(max-width:1200px){
-		.intro{
+	@media(max-width:1200px) {
+		.intro {
 			max-height: auto;
 		}
 	}
 }
-.more-info{
+.more-info {
 	text-align: center;
 	font-size: 18px;
 	font-weight: 500;
 	margin: 20px 0 0;
 }
 .sign-in {
-	.welcomeBlock{
+	.welcomeBlock {
 		padding: 70px;
 		position: relative;
-		color: #fff;
+		color: $white;
 		width: 60%;
 		min-width: 600px;
 		text-align: center;
@@ -48,21 +48,21 @@
 		margin: 70px auto;
 		border: 2px solid #D4D4D4;
 		border-radius: 2px;
-	    h1{
+	    h1 {
 			letter-spacing: -1px;
 			font-size: 45px;
 			margin: 0 0 15px;
 	    }
-	    p{
+	    p {
 	    	font-size: 22px;
 	    	font-weight: 100;
 	    	font-family: $font-family-ssp;
 	    }
 	}
-	.signInBlock{
+	.sign-in-block {
 		// text-align: center;
-		// color:#fff;
-		.btn-admin{
+		// color:$white;
+		.btn-admin {
 			border:2px solid lighten($turquoise, 15%);
 			color: lighten($turquoise, 15%);
 			padding: 5px 10px;
@@ -71,25 +71,25 @@
 			margin: 20px 0 10px;
 			font-family: $font-family-cabin;
 
-		&:active,&:hover, &:focus{
+		&:active,&:hover, &:focus {
 				border:2px solid darken($turquoise, 2%);
 				background:rgba(255,255,255,0.1);
 			}
 		}
 	}
-	.browse-publicly{
+	.browse-publicly {
 		text-align: center;
 		font-size: 16px;
 		position:relative;
 		display: inline-block;
 		margin:15px 0 0 ;
-		border-top: 2px solid #fff;
+		border-top: 2px solid $white;
 		padding:15px;
 		top: -1px;
-		a{
+		a {
 			color: lighten($turquoise, 15%);
 			text-transform: uppercase;
-			&:hover{
+			&:hover {
 				text-decoration: underline;
 			}
 		}
