--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,146 +1,171 @@
 //base ====================================================================
-@import "bootstrap";                                                      
- 
-// Always required /_properties if not importing all animate/animate.scss  
-@import "animate/_properties";                                            
-        
+@import "bootstrap";
+// Always required /_properties if not importing all animate/animate.scss
+@import "animate/_properties";
 
-//font  //=================================================================                                                              
 
-@import "font-awesome/_font-awesome";      
+//font  //=================================================================
+
+@import "font-awesome/_font-awesome";
 
 
 //crn SASS =================================================================
-@import "./_variables";
-@import "./_elements-wrappers";
+@import "./crn_app/_variables";
+@import "./crn_app/_elements-wrappers";
 
 //component common
-@import "./_common.spinner";
-@import "./_common.pagination";
-@import "./_common.status";
-@import "./_common.happybrowser";
-@import "./_common.click-to-edit";
-@import "./_common.typeahead";
-@import "./_common.modals";
-@import "./_common.progress-bar";
-@import "./_common.tooltip";
+@import "./crn_app/_common.spinner";
+@import "./crn_app/_common.pagination";
+@import "./crn_app/_common.status";
+@import "./crn_app/_common.happybrowser";
+@import "./crn_app/_common.click-to-edit";
+@import "./crn_app/_common.typeahead";
+@import "./crn_app/_common.modals";
+@import "./crn_app/_common.progress-bar";
+@import "./crn_app/_common.tooltip";
 
 //component specific
-@import "./_nav.navbar";
-@import "./_nav.left_navbar";
-@import "./_notification.alert";
-@import "./_dataset.dataset";
-@import "./_dataset.jobs";
-@import "./_dataset.tools";
-@import "./_dataset.file-tree";
-@import "./_admin.admin";
-@import "./_user.signin";
-@import "./_dashboard.datasets";
-@import "./_upload.upload";
-@import "./_upload.validation";
-@import "./_admin.tools";
+@import "./crn_app/_nav.navbar";
+@import "./crn_app/_nav.left_navbar";
+@import "./crn_app/_notification.alert";
+@import "./crn_app/_dataset.dataset";
+@import "./crn_app/_dataset.jobs";
+@import "./crn_app/_dataset.tools";
+@import "./crn_app/_dataset.file-tree";
+@import "./crn_app/_admin.admin";
+@import "./crn_app/_user.signin";
+@import "./crn_app/_dashboard.datasets";
+@import "./crn_app/_upload.upload";
+@import "./crn_app/_upload.validation";
+@import "./crn_app/_admin.tools";
 
 // annimations ============================================================
-@import "animate/_fading-entrances/fading-entrances.scss";      
-@import "animate/_sliding-entrances/sliding-entrances.scss";   
-@import "animate/_attention-seekers/attention-seekers.scss";  
-@import "animate/_sliding-entrances/sliding-entrances.scss";   
-@import "animate/_sliding-exits/sliding-exits.scss";  
-@import "animate/_flippers/flippers.scss";       
+@import "animate/_fading-entrances/fading-entrances.scss";
+@import "animate/_sliding-entrances/sliding-entrances.scss";
+@import "animate/_flippers/flippers.scss";
 
-.fadeInDown{@include fadeInDown();}
-.fadeInDownBig{@include fadeInDownBig();}
-.fadeInUp{@include fadeInUp();}
-.fadeInUpBig{@include fadeInUpBig();}
-.fadeInLeft{@include fadeInLeft();}
-.fadeInRight{@include fadeInRight();}
-.fadeInRightBig{@include fadeInRightBig();}
-.fadeIn{@include fadeIn();}
-.slideInRight{@include slideInRight();}
-.bounce{@include bounce();}
-.slideInRight{@include slideInRight();}
-.slideInLeft{@include slideInLeft();}
-.slideInRightFast{@include slideInRightFast();}
-.flipInX{@include flipInX();}
+// .fade-in-down {@include fadeInDown();}
+// .fade-in-down-big {@include fadeInDownBig();}
+// .fade-in-up {@include fadeInUp();}
+// .fade-in-up-big {@include fadeInUpBig();}
+// .fade-in-left {@include fadeInLeft();}
+// .fade-in-right {@include fadeInRight();}
+// .fade-in-right-big {@include fadeInRightBig();}
 
+
+.fade-in {@include fadeIn();}
+.slide-in-left {@include slideInLeft();}
+.slide-in-right-fast {@include slideInRightFast();}
+%slide-in-down { @include slideInDown();}
+.flipin-x {@include flipInX();}
+
+
+.slide-in-down {
+    @extend %slide-in-down;
+}
 
 // custome checkbox
 @keyframes shrink-bounce{
-  0%{
-    transform: scale(1);
-  }
-  33%{    
-    transform: scale(.85);
-  }
-  100%{
-    transform: scale(1);    
-  }
+    0% {
+        transform: scale(1);
+    }
+
+    33% {
+        transform: scale(.85);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
+
 @keyframes checkbox-check{
-  0%{
-    width: 0;
-    height: 0;
-    border-color: #212121;
-    transform: translate3d(0,0,0) rotate(45deg);
-  }
-  33%{
-    width: .2em;
-    height: 0;
-    transform: translate3d(0,0,0) rotate(45deg);
-  }
-  100%{    
-    width: .2em;
-    height: .5em;    
-    border-color: #212121;
-    transform: translate3d(0,-.5em,0) rotate(45deg);
-  }
+    0% {
+        width: 0;
+        height: 0;
+        border-color: $c-21;
+        transform: translate3d(0, 0, 0) rotate(45deg);
+    }
+
+    33% {
+        width: .2em;
+        height: 0;
+        transform: translate3d(0, 0, 0) rotate(45deg);
+    }
+
+    100% {
+        width: .2em;
+        height: .5em;
+        border-color: $c-21;
+        transform: translate3d(0, -.5em, 0) rotate(45deg);
+    }
 }
 
 // custome ellipsis ...
-@-webkit-keyframes dot{
-	0% {opacity: 0;}
-	50% {opacity: 0;}
-	100% {opacity: 1;}
+@-webkit-keyframes dot {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
+
 @keyframes dot {
-	0% {opacity: 0;}
-	50% {opacity: 0;}
-	100% {opacity: 1;}
-}
-.ellipsis-animation{
-	color: $rock;
-	margin: 0;
-	padding: 4px;
-	font-size:12px;
-	.one,
-	.two, 
-	.three {
-		opacity: 0;
-		font-size: 20px;
-		line-height: 10px;
-		-webkit-animation: dot 1.3s infinite;
-		animation: dot 1.3s infinite;
-	}
-	.one {
-		-webkit-animation-delay: 0.0s;
-		animation-delay: 0.0s;
-	}
-	.two {
-		-webkit-animation-delay: 0.2s;
-		animation-delay: 0.2s;
-	}
-	.three {
-		-webkit-animation-delay: 0.3s;
-		animation-delay: 0.3s;
-	}
-}
-.ds-danger .ellipsis-animation{
-	color: $brand-danger;
-}
-.ds-warning .ellipsis-animation{
-	color: $brand-warning;
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
+.ellipsis-animation {
+    color: $rock;
+    margin: 0;
+    padding: 4px;
+    font-size: 12px;
 
+    .one,
+    .two,
+    .three {
+        opacity: 0;
+        font-size: 20px;
+        line-height: 10px;
+        -webkit-animation: dot 1.3s infinite;
+        animation: dot 1.3s infinite;
+    }
 
+    .one {
+        -webkit-animation-delay: .0s;
+        animation-delay: .0s;
+    }
 
+    .two {
+        -webkit-animation-delay: .2s;
+        animation-delay: .2s;
+    }
+
+    .three {
+        -webkit-animation-delay: .3s;
+        animation-delay: .3s;
+    }
+}
+
+.ds-danger .ellipsis-animation {
+    color: $brand-danger;
+}
+
+.ds-warning .ellipsis-animation {
+    color: $brand-warning;
+}
